# patient-x

./: CLAUDE.md  Cargo.toml  INSTRUCTIONS.md  README.md  plan.md
health-data-chain/pallets/access-control/: Cargo.toml
health-data-chain/pallets/access-control/src/: lib.rs  types.rs  weights.rs
health-data-chain/pallets/encryption/: Cargo.toml
health-data-chain/pallets/encryption/src/: lib.rs  types.rs  weights.rs
health-data-chain/pallets/health-records/: Cargo.toml
health-data-chain/pallets/health-records/src/: lib.rs  types.rs  weights.rs
health-data-chain/pallets/ipfs-integration/: Cargo.toml
health-data-chain/pallets/ipfs-integration/src/: lib.rs  types.rs  weights.rs
health-data-chain/pallets/provenance/: Cargo.toml
health-data-chain/pallets/provenance/src/: lib.rs  types.rs  weights.rs
health-data-chain/runtime/: Cargo.toml
health-data-chain/runtime/src/: lib.rs
identity-consent-chain/node/: Cargo.toml
identity-consent-chain/node/src/: lib.rs
identity-consent-chain/pallets/authentication/: Cargo.toml
identity-consent-chain/pallets/authentication/src/: lib.rs  types.rs  weights.rs
identity-consent-chain/pallets/consent-manager/: Cargo.toml
identity-consent-chain/pallets/consent-manager/src/: benchmarking.rs  lib.rs  tests.rs  tests_simple.rs  types.rs  weights.rs
identity-consent-chain/pallets/identity-registry/: Cargo.toml
identity-consent-chain/pallets/identity-registry/src/: benchmarking.rs  lib.rs  tests.rs  types.rs  weights.rs
identity-consent-chain/pallets/jurisdiction-manager/: Cargo.toml
identity-consent-chain/pallets/jurisdiction-manager/src/: lib.rs  types.rs  weights.rs
identity-consent-chain/runtime/: Cargo.toml  build.rs
identity-consent-chain/runtime/src/: lib.rs
marketplace-chain/pallets/data-listings/: Cargo.toml
marketplace-chain/pallets/data-listings/src/: lib.rs  types.rs  weights.rs
marketplace-chain/pallets/marketplace/: Cargo.toml
marketplace-chain/pallets/marketplace/src/: lib.rs  types.rs  weights.rs
marketplace-chain/pallets/negative-registry/: Cargo.toml
marketplace-chain/pallets/negative-registry/src/: lib.rs  types.rs  weights.rs
marketplace-chain/pallets/reputation/: Cargo.toml
marketplace-chain/pallets/reputation/src/: lib.rs  types.rs  weights.rs
marketplace-chain/runtime/: Cargo.toml
marketplace-chain/runtime/src/: lib.rs
