[package]
name = "pallet-jurisdiction-manager"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "MIT"
description = "Jurisdiction and regulatory compliance management pallet for Patient X"
repository.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

# Patient X pallets
pallet-identity-registry = { path = "../identity-registry", default-features = false }
pallet-consent-manager = { path = "../consent-manager", default-features = false }
pallet-authentication = { path = "../authentication", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"pallet-identity-registry/std",
	"pallet-consent-manager/std",
	"pallet-authentication/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-identity-registry/runtime-benchmarks",
	"pallet-consent-manager/runtime-benchmarks",
	"pallet-authentication/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
